[package]
authors = ["Markues Westerlind <marwes91@gmail.com>"]
description = "Test your Rust markdown documentation via Cargo"
license = "MIT/Apache-2.0"
name = "little-skeptic"
version = "0.14.0"
readme = "README.md"
repository = "https://github.com/Marwes/little-skeptic"
homepage = "https://github.com/Marwes/little-skeptic"
documentation = "https://docs.rs/little-skeptic"
keywords = ["markdown", "documentation", "testing"]
categories = ["development-tools", "development-tools::testing"]

[badges]
travis-ci = { repository = "Marwes/little-skeptic" }
appveyor = { repository = "Marwes/little-skeptic" }

[dependencies]
tempdir = "0.3.5"
glob = "0.2"
walkdir = "2.0"
serde_json = "1.0.3"
cargo_metadata = "0.3"
bytecount = "0.3.0"
handlebars = "=1.0.0-beta.1"
failure = "0.1"

[dev-dependencies]
unindent = "0.1.0"

[dependencies.error-chain]
version = "0.11.0"
default-features = false

[dependencies.pulldown-cmark]
version = "0.1.0"
default-features = false

[lib]
name = "little_skeptic"
path = "lib.rs"
