[package]
authors = ["Markues Westerlind <marwes91@gmail.com>"]
description = "Test your Rust markdown documentation via Cargo"
license = "MIT/Apache-2.0"
name = "little-skeptic"
version = "0.15.2"
readme = "README.md"
repository = "https://github.com/Marwes/little-skeptic"
homepage = "https://github.com/Marwes/little-skeptic"
documentation = "https://docs.rs/little-skeptic"
keywords = ["markdown", "documentation", "testing"]
categories = ["development-tools", "development-tools::testing"]

[badges]
travis-ci = { repository = "Marwes/little-skeptic" }
appveyor = { repository = "Marwes/little-skeptic" }

[dependencies]
tempdir = "0.3.5"
glob = "0.3"
walkdir = "2.0"
serde_json = "1.0.3"
cargo_metadata = "0.8"
bytecount = "0.5"
handlebars = "2"
failure = "0.1"

[dev-dependencies]
unindent = "0.1.0"

[dependencies.error-chain]
version = "0.12.0"
default-features = false

[dependencies.pulldown-cmark]
version = "0.5.0"
default-features = false

[lib]
name = "little_skeptic"
path = "lib.rs"
